--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,11 +9,10 @@
     <h1>Life as Lisa-Monique</h1>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/about.html">About</a></li>
+            <li><a href="{{site.baseurl}}/index.html">Home</a></li>
+            <li><a href="{{site.baseurl}}/about.html">About</a></li>
         </ul>
     </nav>
-    <h1>Welcome!</h1>
-<p>This is my life in words</p>
+    {{content}}
 </body>
 </html>
