img extension correction

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
         <div class="container" >
           
           <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_2301.jpg)">
+            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_2301.JPG)">
               <div class="welcome-image-overlay">
                 <a href="{{site.baseurl}}/categories/west-indian-life.html">
                   <div id="inner1" class="inner">
@@ -26,7 +26,7 @@
           </div>
                     
           <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/LisaLion.jpg)">
+            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/LisaLion.JPG)">
               <div class="welcome-image-overlay">
                 <a href=""welcome-image-overlay">
                 <a href="{{site.baseurl}}/categories/art">
@@ -40,7 +40,7 @@
           </div>
           
           <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_1505.jpg)">
+            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_1505.JPG)">
               <div class="welcome-image-overlay">
                 <a href=""welcome-image-overlay">
                 <a href="{{site.baseurl}}/categories/academic-life">
