img orientation and link correction

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
                 <span>{{site.title}}</span>
             </h4>
             <div class="about-me">
-                <a href="/index.php?page_id=17">
+                <a href="{{site.baseurl}}/about.html">
                     <img src="{{site.baseurl}}/img/IMGP9087.jpg" style="margin-bottom: 8px; height: auto; max-width: 100%">
                     <p style="text-align: center;font-size: 12px; font-family: 'Open Sans'; padding-top: 10px;">
                         {{site.description}}
