--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,7 +32,7 @@
         <div class="post-thumbnail">
             <img src="{{site.baseurl}}/img/{{page.thumbnail}}">
         </div>
-        <div class="post-entry">
+        <div class="post-entry" style="margin-top: -90px">
             <div class="post-wrapper">
                 
                 <div class="post-summary">
