--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,9 @@
     outline: 0;
     border-color: #F69C9B
 }
+img {
+    image-orientation: from-image;
+}
 a{
     text-decoration: none;
     color: #A4E1CE;
@@ -120,9 +123,8 @@ a:hover{
 @media screen and (min-height: 200px){
   .scroll-arrow{
     cursor: pointer;
-    position: absolute;
+    position: relative;
     left: 50%;
-    margin-left: -75px;
     width: 150px;
     z-index: 10;
     height: 30px;
@@ -170,6 +172,8 @@ a:hover{
     font-size: 28px;
     font-weight: bold;
     text-align: center;
+    position: absolute;
+    margin-left: -25px;
   }
 
   .scroll-arrow:hover span {
