--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,8 +27,8 @@
         <div class="collapse navbar-collapse navbar-right">
         <!-- pull-right keeps the drop-down in line -->
             <ul class="nav navbar-nav pull-right">
-                <li><a href="{{site.baseurl}}/about.html">About Me</a></li>
-                <li><a href="{{site.baseurl}}/contact.html">Contact</a></li>
+                <li><a href="{{site.baseurl}}/about">About Me</a></li>
+                <li><a href="{{site.baseurl}}/contact">Contact</a></li>
             </ul>
         </div>
         <div class="collapse navbar-collapse navbar-left">
