--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
                 <span>{{site.title}}</span>
             </h4>
             <div class="about-me">
-                <a href="{{site.baseurl}}/about.html">
+                <a href="{{site.baseurl}}/about">
                     <img src="{{site.baseurl}}/img/IMGP9087.jpg" style="margin-bottom: 8px; height: auto; max-width: 100%">
                     <p style="text-align: center;font-size: 12px; font-family: 'Open Sans'; padding-top: 10px;">
                         {{site.description}}
@@ -51,11 +51,12 @@
                 </div>
             </div>
         </div>
+        <!--
         <div class="widget tag-cloud">
         <h4 class="widget-title">
             <span>Popular Tags</span>
         </h4>
-        <!-- cloud tag -->
-        </div>
+        </div> 
+        -->
     </div>
 </div>
