--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
           <div class="col-md-4">
             <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_2301.JPG)">
               <div class="welcome-image-overlay">
-                <a href="{{site.baseurl}}/categories/west-indian-life.html">
+                <a href="{{site.baseurl}}/categories/west-indian-life">
                   <div id="inner1" class="inner">
                     <h5 id="h5-1">Unappologetic</h5>
                     <h4 id="h4-1">West Indian</h4>
