--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{page.meta}}">
-    <meta name="author" content="">
+    <meta name="author" content="{{site.author}}">
 
     <title>{%if page.title%}{{page.title}} . {% endif %} Life as Lisa-Monique{% if page.titleAfter %} . {{page.titleAfter}}{% endif %} </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
