--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 <div class="default-grad" style="min-height: 100vh">
   {% include nav.html %}
-  <img src="{{site.baseurl}}/img/logo2.svg" style="max-width: 1000px; margin-left: auto; margin-right: auto; display: block;">
+  <img class="logo2" src="{{site.baseurl}}/img/logo2.gif">
 
   <a href="#groups" class="scroll-arrow"><span>WELCOME</span></a>
 </div>
