--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 {% include nav.html %}
-  <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/logo2.svg" style="max-width: 400px; margin-left: auto; margin-right: auto; margin-top:-6%; display: block;"></a>
+  <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/logo2.gif" style="max-width: 400px; margin-left: auto; margin-right: auto; margin-top:-6%; display: block;"></a>
 
   <div class="row">
   <div class="col-md-8"> 
