--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,13 @@
     outline: 0;
     border-color: #F69C9B
 }
+.logo2{
+    max-width: 900px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
 img {
     image-orientation: from-image;
 }
