--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,70 +1,12 @@
 {% include header.html %}
-<div class="default-grad" style="min-height: 100vh">
-  {% include nav.html %}
+<div class="default-grad" style="min-height: 95vh">
   <img class="logo2" src="{{site.baseurl}}/img/logo2.gif">
 
-  <a href="#groups" class="scroll-arrow"><span>WELCOME</span></a>
-</div>
+  <!-- <a href="#groups" class="scroll-arrow"><span>WELCOME</span></a> -->
 
-<div class="reverse-grad" style="margin-bottom: 70px">
-  <div class="container" id="groups">
-    <div class="row" >
-      <div id="reel" class="clearfix">
-        <div class="container" >
-          
-          <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_2301.JPG)">
-              <div class="welcome-image-overlay">
-                <a href="{{site.baseurl}}/categories/west-indian-life">
-                  <div id="inner1" class="inner">
-                    <h5 id="h5-1">Unappologetic</h5>
-                    <h4 id="h4-1">West Indian</h4>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-                    
-          <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/LisaLion.JPG)">
-              <div class="welcome-image-overlay">
-                <a href=""welcome-image-overlay">
-                <a href="{{site.baseurl}}/categories/art">
-                  <div id="inner2" class="inner">
-                    <h5 id="h5-2">Unrestrained</h5>
-                    <h4 id="h4-2">Artist</h4>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-md-4">
-            <div class="welcome-image" style="background-image:url({{site.baseurl}}/img/IMG_1505.JPG)">
-              <div class="welcome-image-overlay">
-                <a href=""welcome-image-overlay">
-                <a href="{{site.baseurl}}/categories/academic-life">
-                  <div id="inner3" class="inner">
-                    <h5 id="h5-3">Underestimated</h5>
-                    <h4 id="h4-3">Scientist</h4>
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-8"> 
-      <div class="content-sidebar">
-         {{ content }} 
-      </div>
-  </div>
-  <div class="col-md-4">
-    {% include sidebar.html %}
+  <div class="container passwdpg">
+    <h2>Returning Soon</h2>
+    <p>We're working hard behind the scenes to come back better than ever! Stay tuned for updates!</p>
   </div>
 </div>
  
